--- a/css/impactos.css
+++ b/css/impactos.css
@@ -77,7 +77,7 @@ nav ul li a {
 }
 
 nav ul li:hover > a {
-    background-color: gray;
+    background-color: rgb(73, 73, 73);
     border-radius: 5px;
 }
 
@@ -109,18 +109,18 @@ nav ul li:hover > a {
 }
 
 .dropdown-solution {
-    display: none; /* Esconde o dropdown inicialmente */
+    display: none;
     left: -3rem;
     top: 1.5rem;
-    position: absolute; /* Posiciona o dropdown em relação ao seu item pai */
+    position: absolute; 
     background-color: #1a1a1a;
-    border-radius: 5px;
+    border-radius: 10px;
     z-index: 1000;
     padding: 10px 0;
 }
 
 nav ul li:hover .dropdown-solution {
-    display: block; /* Exibe o dropdown ao passar o mouse */
+    display: block; 
 }
 
 .dropdown-solution li {
@@ -133,7 +133,12 @@ nav ul li:hover .dropdown-solution {
 }
 
 .dropdown-solution li:hover {
-    background-color: gray;
+    background-color: rgb(73, 73, 73);
+    border-radius: 5px;
+}
+
+.retorno {
+    text-decoration: none;
 }
 
 /* Menu mobile */
