--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ nav ul li a {
 }
 
 nav ul li:hover > a {
-    background-color: gray;
+    background-color: rgb(73, 73, 73);
     border-radius: 5px;
 }
     
@@ -100,18 +100,18 @@ nav ul li:hover > a {
 }
 
 .dropdown-solution {
-    display: none; /* Esconde o dropdown inicialmente */
+    display: none;
     left: -3rem;
     top: 1.5rem;
-    position: absolute; /* Posiciona o dropdown em relação ao seu item pai */
+    position: absolute; 
     background-color: #1a1a1a;
-    border-radius: 5px;
+    border-radius: 10px;
     z-index: 1000;
     padding: 10px 0;
 }
 
 nav ul li:hover .dropdown-solution {
-    display: block; /* Exibe o dropdown ao passar o mouse */
+    display: block; 
 }
 
 .dropdown-solution li {
@@ -124,7 +124,12 @@ nav ul li:hover .dropdown-solution {
 }
 
 .dropdown-solution li:hover {
-    background-color: gray;
+    background-color: rgb(73, 73, 73);
+    border-radius: 5px;
+}
+
+.retorno {
+    text-decoration: none;
 }
 
 /* Menu mobile */
@@ -237,12 +242,12 @@ nav ul li:hover .dropdown-solution {
 .image-container {
     position: relative;
     width: 100%; 
-    height: 100%; 
+    height: 90%; 
     overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
-    bottom: 3.2rem;
+    bottom: 5.9rem;
     box-shadow: 0px 0px 10px #000;
 }
 
@@ -267,6 +272,8 @@ nav ul li:hover .dropdown-solution {
     justify-content: space-between;
     margin: 30px auto;
     padding: 80px;
+    position: relative;
+    bottom: 3rem;
 }
 
 .card {
